<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_height="wrap_content"
        android:text="@string/vyhladaj" />

    <EditText
        android:id="@+id/konecnaInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="1"
        android:hint="@string/konecna"
        android:inputType="text"
        android:visibility="visible" />


    <EditText
        android:id="@+id/vychodziaInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/vychodzia"
        android:inputType="text"
        android:visibility="visible" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/vyberZastavku"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vyber_zastavky"
        android:textSize="36sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/vyhladavamText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vyhladavam"
        android:textSize="24sp"
        android:visibility="invisible" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />
</LinearLayout>